Fix accessibility tests